Few alterations in the Animations

--- a/Senators_Project/Styles/styles.css
+++ b/Senators_Project/Styles/styles.css
@@ -529,7 +529,6 @@ video::-webkit-media-controls {
   }  
 }
 
-
 .text_animation {
   position: relative;
   font-size: 8vw;
@@ -547,11 +546,13 @@ video::-webkit-media-controls {
 @keyframes animate {
   0%, 100%
   {
-    clip-path: polygon(0 66%, 15% 66%, 26% 53%, 35% 52%, 46% 58%, 56% 64%, 70% 65%, 88% 56%, 100% 55%, 99% 99%, 0% 100%);
+    clip-path: polygon(0 66%, 15% 66%, 26% 53%, 35% 52%, 46% 58%, 56% 64%,
+     70% 65%, 88% 56%, 100% 55%, 99% 99%, 0% 100%);
 
   }
   50% {
-    clip-path: polygon(0% 43%, 15% 52%, 29% 57%, 43% 61%, 59% 57%, 72% 48%, 85% 43%, 92% 39%, 100% 38%, 99% 99%, 0% 100%);
+    clip-path: polygon(0% 43%, 15% 52%, 29% 57%, 43% 61%, 59% 57%, 72% 48%,
+     85% 43%, 92% 39%, 100% 38%, 99% 99%, 0% 100%);
 
   }
 }
