--- a/Senators_Project/Styles/styles.css
+++ b/Senators_Project/Styles/styles.css
@@ -76,10 +76,6 @@ hr {
   text-align: center;
 }
 
-.text_align_webkit_center {
-  text-align: -webkit-center;
-}
-
 .flex_center {
   display: flex;
   justify-content: center;
@@ -336,16 +332,18 @@ hr {
 {
   border: 1px solid var(--darkbrown);
   padding: 2%;
-  width: 66%;
+  max-width: 110px;
   margin: 0;
   color: var(--chocolate);
   background-color: var(--bisque);
   list-style-type: none;
+  transition: transform 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 
 .filter_list_class:hover
 {
   cursor: pointer;
+  transform: scale(1.1);
   background-color: var(--chocolate);
   color: var(--bisque);
 }
@@ -359,6 +357,15 @@ hr {
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
   width: 120px;
+}
+
+.filter_grid_class
+{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 0px;
+  padding: 0px;
+  gap: 0px;
 }
 
 #main_filter_id
@@ -380,9 +387,14 @@ hr {
 #filter_party_list
 {
   position: absolute;
-  z-index: 0;
+  z-index: 1;
   min-width: 170px;
   text-align: center;
+}
+
+#filter_state_list
+{
+  margin-left: -28px;
 }
 
 /* About Section */
@@ -395,6 +407,7 @@ hr {
   margin-top: 10px;
   margin-left: 5px;
   margin-right: 5px;
+  width: 80%;
 }
 
 #intro_video_tag:hover {
@@ -421,6 +434,7 @@ video::-webkit-media-controls {
   text-align: center;
   width: 100%;
   height: 50px;
+  z-index: 10;
   background-color: var(--chocolate);
 }
 
@@ -493,13 +507,13 @@ video::-webkit-media-controls {
 
 .animate_popup_in
 {
-  animation: fade_in 1s cubic-bezier(0.19, 1, 0.22, 1);
+  animation: fade_in 0.5s cubic-bezier(0.19, 1, 0.22, 1);
   animation-iteration-count: 1;
 }
 
 .animate_popup_out
 {
-  animation: fade_out 0.4s ease;
+  animation: fade_out 0.5s cubic-bezier(0.19, 1, 0.22, 1);
   animation-iteration-count: 1;
 }
 
@@ -507,12 +521,12 @@ video::-webkit-media-controls {
   0%
   {
     opacity: 0;
-    scale: 0.5;
+    transform: scale(0.5);
   }
   100%
   {
     opacity: 1;
-    scale: 1;
+    transform: scale(1);
   }  
 }
 
@@ -520,13 +534,13 @@ video::-webkit-media-controls {
   0%
   {
     opacity: 1;
-    scale: 1;
+    transform: scale(1);
   }
   100%
   {
     bottom: 0;
     opacity: 0;
-    scale: 0.5;
+    transform: scale(0.5);
   }  
 }
 
