--- a/Senators_Project/Styles/styles.css
+++ b/Senators_Project/Styles/styles.css
@@ -446,7 +446,7 @@ video::-webkit-media-controls {
   width: 100%;
   height: 100%;
   opacity: 0.7;
-  z-index: 2;
+  z-index: 15;
   overflow: hidden;
 }
 
@@ -458,11 +458,11 @@ video::-webkit-media-controls {
   font-size: large;
   text-align: center;
   position: fixed;
-  top: 20vh;
+  top: 19vh;
   left: 5vw;
   width: 80%; 
   max-width: 400px; 
-  z-index: 3;
+  z-index: 20;
   font-family: var(--gillfont);
 }
 
@@ -487,9 +487,13 @@ video::-webkit-media-controls {
 
 .popup_header
 {
-  color: var(--darkbrowntext);
-  font-size: 30px; 
-  text-decoration: underline;
+  padding-bottom: 5px;
+  background: linear-gradient(to right, var(--red), var(--blue));
+  -webkit-text-stroke: 1px #363062;
+  -webkit-background-clip: text; /* For Safari and older browsers */
+  background-clip: text;
+  color: transparent;
+  font-size: xx-large; 
 }
 
 .social_media_box
